--- a/angular.json
+++ b/angular.json
@@ -15,7 +15,6 @@
           "options": {
             "outputPath": "dist/portfolio",
             "index": "src/index.html",
-            "baseHref": "/my-path/https://ilyesblg.github.io/porfolio-bg/  ",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
@@ -98,6 +97,9 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
